[package]
name = "ip-check"
version = "0.1.0"
edition = "2021"
description = "Check in what country an IP address is located"
author = "Simon Sporrong"
include = ["src/*", "Cargo.toml", "README.md"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
